[project]
name = "cometsuite"
description = "Simulate cometary dust dynamics."
readme = "README.md"
authors = [{ name = "Michael S. P. Kelley", email = "msk@astro.umd.edu" }]
license = { text = "MIT License" }
dependencies = [
    "numpy",
    "scipy",
    "astropy>=4",
    "mskpy>=3",
    "spiceypy",
    "matplotlib",
    "sbpy>=0.3",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/mkelley/pycometsuite"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2", "cython"]
build-backend = 'setuptools.build_meta'

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
write_to = "cometsuite/_version.py"

[tool.setuptools.packages.find]

[project.optional-dependencies]
docs = ["sphinx>=1.3", "sphinx-automodapi", "numpydoc"]
